syntax = "proto3";

package order;

option go_package = "./orderpb";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

message Order {
  string order_id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  string status = 5;
  string created_at = 6;
}

message CreateOrderRequest {
  repeated OrderItem items = 2;
  string payment_method_id = 3;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {
}

message ListOrdersResponse {
  repeated Order orders = 1;
}
